testdata/baselines/reference/submodule/compiler/overloadsWithProvisionalErrors.errors.txt
overloadsWithProvisionalErrors.ts(6,11): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{}' is missing the following properties from type '{ a: number; b: number; }': a, b
overloadsWithProvisionalErrors.ts(7,17): error TS2304: Cannot find name 'blah'.
overloadsWithProvisionalErrors.ts(8,11): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Property 'b' is missing in type '{ a: any; }' but required in type '{ a: number; b: number; }'.
overloadsWithProvisionalErrors.ts(8,17): error TS2304: Cannot find name 'blah'.


==== overloadsWithProvisionalErrors.ts (4 errors) ====
    var func: {
        (s: string): number;
        (lambda: (s: string) => { a: number; b: number }): string;
    };
    
    func(s => ({})); // Error for no applicable overload (object type is missing a and b)
              ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{}' is missing the following properties from type '{ a: number; b: number; }': a, b
!!! related TS6502 overloadsWithProvisionalErrors.ts:3:14: The expected type comes from the return type of this signature.
!!! related TS2771 overloadsWithProvisionalErrors.ts:3:5: The last overload is declared here.
    func(s => ({ a: blah, b: 3 })); // Only error inside the function, but not outside (since it would be applicable if not for the provisional error)
                    ~~~~
!!! error TS2304: Cannot find name 'blah'.
    func(s => ({ a: blah })); // Two errors here, one for blah not being defined, and one for the overload since it would not be applicable anyway
              ~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Property 'b' is missing in type '{ a: any; }' but required in type '{ a: number; b: number; }'.
!!! related TS2728 overloadsWithProvisionalErrors.ts:3:42: 'b' is declared here.
!!! related TS6502 overloadsWithProvisionalErrors.ts:3:14: The expected type comes from the return type of this signature.
!!! related TS2771 overloadsWithProvisionalErrors.ts:3:5: The last overload is declared here.
                    ~~~~
!!! error TS2304: Cannot find name 'blah'.